--- a/css/style.css
+++ b/css/style.css
@@ -135,3 +135,9 @@ footer{
 .text_link:visited{
     color: rgb(101,77,141);
 }
+
+@media screen and (max-width: 600px){
+    html{
+        font-size: 0.5em;
+    }
+}
